# hyperspaceKitchen-king

./: .env.example  .gitignore  Dockerfile  Kitchen_king.py  README.md  authorization.html  docker-compose.yaml  elements.html  feedback.html  generic.html  index.html  main.py  pyproject.toml
.devcontainer/: devcontainer.json
instance/: db.sqlite
static/css/: fontawesome-all.min.css  main.css  noscript.css
templates/: Authorization.html  base.html  elements.html  feedback.html  food_packaging_learn_more.html  gallery.html  generic.html  index.html
