[tool.poetry]
name = "hyperspacekitchen-king"
version = "0.1.0"
description = ""
authors = ["kamal Kumar <kamal.kumar9@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
