[tool.poetry]
name = "hyperspacekitchen-king"
version = "0.1.0"
description = ""
authors = ["kamal Kumar <kamal.kumar9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
